# minimal-multithreaded-lcm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
lcmtypes/: CMakeLists.txt  minmt_colors_t.lcm  minmt_example_t.lcm
src/: CMakeLists.txt  main.c  main.h
